@@ -1,8 +1,8 @@
 <use name=boost>
-#<use name=FWCore/MessageLogger>
+<use name=FWCore/ParameterSet>
 
 <bin file=EdmConfigToPython.cpp>
  <use name=boost>
- <use name=FWCore/Framework>
+ <use name=FWCore/ParameterSet>
 </bin>
 
